# cargo-crane

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: release.yml
src/: analyze.rs  apply.rs  cli.rs  closure.rs  main.rs  module.rs  plan.rs  tui.rs  workspace.rs
